# tauri-somo-rs

./: README.md  index.html  package.json  pnpm-lock.yaml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  scheme.rs
src-tauri/src/connections/: macos.rs  mod.rs
src/components/: ProcessTable.tsx
src/utils/: invoke.ts
