[package]
name = "tauri-somo-rs"
version = "1.1.0"
description = "A human-friendly alternative to netstat for socket and port monitoring on Linux and macOS."
authors = ["deshuiyu"]
edition = "2021"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/theopfr/somo/"
keywords = ["netstat", "socket-monitoring", "port-checker"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_somo_rs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"


[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.17.0"

[target.'cfg(target_os = "macos")'.dependencies]
netstat2 = "0.11.1"
libproc = "0.14.10"
